--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Zalo: Chauduong -->
 			<img src="images/avatar.jpg" alt="Avatar" class="myAvatar">
 			<div class="content">
 				<div class="inner">
-					<h1>Nguyễn Thị Ngọc Châu</h1>
+					<h1>Châu Nguyễn</h1>
 					Chức vụ: CEO
 					<br>Cty: TNHH DV&TM Nghiêm Gia Hân</br>
 					<p>	Địa chỉ: 63 Lê Đức Thọ, Phường 7, Gò Vấp</p>
