adding some friend

--- a/chaunguyen.html
+++ b/chaunguyen.html
@@ -44,7 +44,7 @@ Zalo: Chauduong -->
 			</div>
 			<nav>
 				<ul>
-					<li><a href="chaunguyen.html">Chau</a></li>
+					<li><a href="tel://0907071560">Gọi điện</a></li>
 					<li><a href="https://zalo.me/0907071560">Zalo</a></li>
 					<li><a href="https://www.facebook.com/nguyen.chau.5099">Facebook</a></li>
 					<li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
