--- a/chaunguyen.html
+++ b/chaunguyen.html
@@ -15,16 +15,6 @@
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
-<!-- Nguyễn Thị Ngọc Châu
-0907071560
-chaunguyen.pistore@gmail.com
-fb: Châu Dương
-Sở thích: chơi vơi con
-Yêu màu hồng ghét sự dã dối     :D
-Chức vụ: CEO
-Cty: TNHH DV&TM Nghiêm Gia Hân
-Địa chỉ: 63 Lê Đức Thọ, Phường 7, Gò Vấp
-Zalo: Chauduong -->
 
 <body class="is-preload">
 
@@ -33,22 +23,20 @@ Zalo: Chauduong -->
 
 		<!-- Header -->
 		<header id="header">
-			<img src="images/avatar.jpg" alt="Avatar" class="myAvatar">
+			<img src="images/chaunguyen.jpg" alt="Avatar" class="myAvatar">
 			<div class="content">
 				<div class="inner">
 					<h1>Châu Nguyễn</h1>
-					Chức vụ: CEO
-					<br>Cty: TNHH DV&TM Nghiêm Gia Hân</br>
-					<p>	Địa chỉ: 63 Lê Đức Thọ, Phường 7, Gò Vấp</p>
+					Giám đốc kinh doanh
 				</div>
 			</div>
 			<nav>
 				<ul>
 					<li><a href="tel://0907071560">Gọi điện</a></li>
 					<li><a href="https://zalo.me/0907071560">Zalo</a></li>
-					<li><a href="https://www.facebook.com/nguyen.chau.5099">Facebook</a></li>
-					<li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
-					<!--<li><a href="#elements">Elements</a></li>-->
+				
+                    <li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
+                    <li><a href="https://pitech.asia">Website</a></li>
 				</ul>
 			</nav>
 		</header>
