--- a/vantran.html
+++ b/vantran.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Chamdi - Pitech</title>
+	<title>Chamdi - Vân Trần</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,23 +33,19 @@ Zalo: Chauduong -->
 
 		<!-- Header -->
 		<header id="header">
-			<img src="images/pitech.png" alt="Avatar" width="10%">
+			<img src="images/tungdao.jpg" alt="Avatar" class="myAvatar">
 			<div class="content">
 				<div class="inner">
-					<h1>Pitech profile</h1>
+					<h1>Trần Thị Bích Vân</h1>
+					Customer Relationship Manager
 				</div>
 			</div>
 			<nav>
 				<ul>
-					<li><a href="chaunguyen.html">Châu Dương</a></li>
-					<li><a href="tungdao.html">Tùng Đào</a></li>
-					<li><a href="https://www.facebook.com/nguyen.chau.5099">Facebook</a></li>
-					<li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
-					<li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
-
-					<li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
-
-					<!--<li><a href="#elements">Elements</a></li>-->
+					<li><a href="tel://0963188854">Gọi điện</a></li>
+					<li><a href="https://zalo.me/0963188854">Zalo</a></li>
+                    <li><a href="mailto:van.tran@pitech.asia">Email</a></li>
+                    <li><a href="https://pitech.asia">Website</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -383,7 +379,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<p class="copyright">&copy;<a href="https://chamdiprj.netlify.app/">Chamdi</a>.</p>
+			<p class="copyright">&copy;<a href="http://chamdi.ml">Chamdi.ml</a>.</p>
 		</footer>
 
 	</div>
