--- a/huyenhuynh.html
+++ b/huyenhuynh.html
@@ -7,24 +7,13 @@
 <html>
 
 <head>
-	<title>Chamdi - Pitech</title>
+	<title>Chamdi - Huyền Huỳnh</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
-
-<!-- Nguyễn Thị Ngọc Châu
-0907071560
-chaunguyen.pistore@gmail.com
-fb: Châu Dương
-Sở thích: chơi vơi con
-Yêu màu hồng ghét sự dã dối     :D
-Chức vụ: CEO
-Cty: TNHH DV&TM Nghiêm Gia Hân
-Địa chỉ: 63 Lê Đức Thọ, Phường 7, Gò Vấp
-Zalo: Chauduong -->
 
 <body class="is-preload">
 
@@ -33,23 +22,19 @@ Zalo: Chauduong -->
 
 		<!-- Header -->
 		<header id="header">
-			<img src="images/pitech.png" alt="Avatar" width="10%">
+			<img src="images/tungdao.jpg" alt="Avatar" class="myAvatar">
 			<div class="content">
 				<div class="inner">
-					<h1>Pitech profile</h1>
+					<h1>Huỳnh Thị Ngọc Huyền</h1>
+					Trợ lý giám đốc
 				</div>
 			</div>
 			<nav>
 				<ul>
-					<li><a href="chaunguyen.html">Châu Dương</a></li>
-					<li><a href="tungdao.html">Tùng Đào</a></li>
-					<li><a href="https://www.facebook.com/nguyen.chau.5099">Facebook</a></li>
-					<li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
-					<li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
-
-					<li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
-
-					<!--<li><a href="#elements">Elements</a></li>-->
+					<li><a href="tel://0938269356">Gọi điện</a></li>
+					<li><a href="https://zalo.me/0938269356">Zalo</a></li>
+                    <li><a href="mailto:huyen.huynh@pitech.asia">Email</a></li>
+                    <li><a href="https://pitech.asia">Website</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -383,7 +368,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<p class="copyright">&copy;<a href="https://chamdiprj.netlify.app/">Chamdi</a>.</p>
+			<p class="copyright">&copy;<a href="http://chamdi.ml">Chamdi.ml</a>.</p>
 		</footer>
 
 	</div>
