adding new member

--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@ Zalo: Chauduong -->
 				<ul>
 					<li><a href="chaunguyen.html">Châu Dương</a></li>
 					<li><a href="tungdao.html">Tùng Đào</a></li>
-					<li><a href="https://www.facebook.com/nguyen.chau.5099">Facebook</a></li>
-					<li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
-					<li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
-
-					<li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
+					<li><a href="huyenhuynh.html">Huyền Huỳnh</a></li>
+					<li><a href="hoangnghiem.html">Hoàng Nghiêm</a></li>
+					<li><a href="ngahuynh.html">Nga Huỳnh</a></li>
+					<li><a href="vantran.html">Vân Trần</a></li>
 
 					<!--<li><a href="#elements">Elements</a></li>-->
 				</ul>
