fixing new item

--- a/chaunguyen.html
+++ b/chaunguyen.html
@@ -27,7 +27,7 @@
 			<div class="content">
 				<div class="inner">
 					<h1>Châu Nguyễn</h1>
-					Giám đốc kinh doanh
+					Chief Customer Officer
 				</div>
 			</div>
 			<nav>
