--- a/tungdao.html
+++ b/tungdao.html
@@ -26,7 +26,7 @@
 			<div class="content">
 				<div class="inner">
 					<h1>Đào Duy Tùng</h1>
-					Trợ lý giám đốc
+					CEO Assistant
 				</div>
 			</div>
 			<nav>
