--- a/huyenhuynh.html
+++ b/huyenhuynh.html
@@ -26,7 +26,7 @@
 			<div class="content">
 				<div class="inner">
 					<h1>Huỳnh Thị Ngọc Huyền</h1>
-					Trợ lý giám đốc
+					CEO Assistant
 				</div>
 			</div>
 			<nav>
