fixing mr tung number

--- a/hoangnghiem.html
+++ b/hoangnghiem.html
@@ -44,7 +44,7 @@ Zalo: Chauduong -->
 				<ul>
 					<li><a href="tel://0977097797">Gọi điện</a></li>
 					<li><a href="https://zalo.me/0977097797">Zalo</a></li>
-                    <li><a href="mailto:huyen.nghiem@pitech.asia">Email</a></li>
+                    <li><a href="mailto:hoang.nghiem@pitech.asia">Email</a></li>
                     <li><a href="https://pitech.asia">Website</a></li>
 				</ul>
 			</nav>
