--- a/ngahuynh.html
+++ b/ngahuynh.html
@@ -44,7 +44,7 @@ Zalo: Chauduong -->
 				<ul>
 					<li><a href="tel://0964950809">Gọi điện</a></li>
 					<li><a href="https://zalo.me/0964950809">Zalo</a></li>
-                    <li><a href="mailto:huyen.nghiem@pitech.asia">Email</a></li>
+                    <li><a href="mailto:nga.huynh@pitech.asia">Email</a></li>
                     <li><a href="https://pitech.asia">Website</a></li>
 				</ul>
 			</nav>
