--- a/chaunguyen.html
+++ b/chaunguyen.html
@@ -35,7 +35,7 @@
 					<li><a href="tel://0907071560">Gọi điện</a></li>
 					<li><a href="https://zalo.me/0907071560">Zalo</a></li>
 				
-                    <li><a href="mailto:chaunguyen.pistore@gmail.com">Email</a></li>
+                    <li><a href="mailto:ngocchau.nguyen@pitech.asia">Email</a></li>
                     <li><a href="https://pitech.asia">Website</a></li>
 				</ul>
 			</nav>
