--- a/chaunguyen.html
+++ b/chaunguyen.html
@@ -26,7 +26,7 @@
 			<img src="images/chaunguyen.jpg" alt="Avatar" class="myAvatar">
 			<div class="content">
 				<div class="inner">
-					<h1>Châu Nguyễn</h1>
+					<h1>Nguyễn Thị Ngọc Châu</h1>
 					Chief Customer Officer
 				</div>
 			</div>
