--- a/hoangnghiem.html
+++ b/hoangnghiem.html
@@ -33,7 +33,7 @@ Zalo: Chauduong -->
 
 		<!-- Header -->
 		<header id="header">
-			<img src="images/tungdao.jpg" alt="Avatar" class="myAvatar">
+			<img src="images/hoangnghiem.png" alt="Avatar" class="myAvatar">
 			<div class="content">
 				<div class="inner">
 					<h1>Nghiêm Anh Hoàng</h1>
