--- a/huyenhuynh.html
+++ b/huyenhuynh.html
@@ -22,7 +22,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<img src="images/tungdao.jpg" alt="Avatar" class="myAvatar">
+			<img src="images/huyenhuynh.png" alt="Avatar" class="myAvatar">
 			<div class="content">
 				<div class="inner">
 					<h1>Huỳnh Thị Ngọc Huyền</h1>
