--- a/tungdao.html
+++ b/tungdao.html
@@ -22,7 +22,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<img src="images/tungdao.jpg" alt="Avatar" class="myAvatar">
+			<img src="images/tungdao.png" alt="Avatar" class="myAvatar">
 			<div class="content">
 				<div class="inner">
 					<h1>Đào Duy Tùng</h1>
