--- a/ngahuynh.html
+++ b/ngahuynh.html
@@ -33,7 +33,7 @@ Zalo: Chauduong -->
 
 		<!-- Header -->
 		<header id="header">
-			<img src="images/tungdao.jpg" alt="Avatar" class="myAvatar">
+			<img src="images/ngahuynh.jpg" alt="Avatar" class="myAvatar">
 			<div class="content">
 				<div class="inner">
 					<h1>Huỳnh Thị Tuyết Nga</h1>
